--- a/PROGRAM/BIGMART/代码解析.md
+++ b/PROGRAM/BIGMART/代码解析.md
@@ -1,19 +1,32 @@
-###根据BIGMART提供的各门店和产品的信息(分成train和test两个CSV文件，其中test文件中是没有sales数据的，需要预测)，预测它的销售情况。###
+### 根据BIGMART提供的各门店和产品的信息(分成train和test两个CSV文件，其中test文件中是没有sales数据的，需要预测)，预测它的销售情况。###
 
 **BIGMART 提供了哪些信息？**
+
 **Item_Identifier：商品编号**
+
 **Item_Weight：商品重量**
+
 **Item_Fat_Content：商品含脂肪的程度，有两种：Low和Regular**
+
 **Item_Visibility：商品被顾客看见的容易程度**
+
 **Item_Type：商品的种类**
+
 **Outlet_Identifier：门店编号**
+
 **Outlet_Establishment_Year：门店创建时间**
+
 **Outlet_Size：门店大小，有三种 High，Medium，Small**
+
+
 **Outlet_Location_Type：门店的地段，分三级**
+
 **tlet_Type：门店的种类**
+
 **Item_Outlet_Sales：商品的销售额**
+
 <br>
-**首先导入CSV文件，添加一列Outlet——Age表示门店成立了多久**
+**首先导入CSV文件，添加一列Outlet_Age表示门店成立了多久**
 ```python
 train=pd.read_csv('E:\DUKE\maching learning\Demo Datasets\Lesson 4\\bigmart_train.csv')
 train['Outlet_Age']=2020-train['Outlet_Establishment_Year']
