--- a/PROGRAM/BIGMART/代码解析.md
+++ b/PROGRAM/BIGMART/代码解析.md
@@ -28,7 +28,7 @@
 <br>
 **首先导入CSV文件，添加一列Outlet_Age表示门店成立了多久**
 ```python
-train=pd.read_csv('E:\DUKE\maching learning\Demo Datasets\Lesson 4\\bigmart_train.csv')
+train=pd.read_csv('bigmart_train.csv')
 train['Outlet_Age']=2020-train['Outlet_Establishment_Year']
 ```
 <br>
