--- a/PROGRAM/BIGMART/代码解析.md
+++ b/PROGRAM/BIGMART/代码解析.md
@@ -1,6 +1,6 @@
 ### 根据BIGMART提供的各门店和产品的信息(分成train和test两个CSV文件，其中test文件中是没有sales数据的，需要预测)，预测它的销售情况。###
 
-**BIGMART 提供了哪些信息？**
+**先看一下BIGMART 提供了哪些信息？**
 
 **Item_Identifier：商品编号**
 
@@ -27,6 +27,7 @@
 
 <br>
 **首先导入CSV文件，添加一列Outlet_Age表示门店成立了多久**
+
 ```python
 train=pd.read_csv('bigmart_train.csv')
 train['Outlet_Age']=2020-train['Outlet_Establishment_Year']
