--- a/PROGRAM/BIGMART/代码解析.md
+++ b/PROGRAM/BIGMART/代码解析.md
@@ -37,7 +37,7 @@ train['Outlet_Age']=2020-train['Outlet_Establishment_Year']
 <br>
 
 **查看有哪些数据缺失，发现Item_Weight有1463行缺少数据，Outlet_Size有2410行数据缺少**
-
+![image](https://github.com/suvieu/MACHINE-LEARNING/blob/master/PROGRAM/BIGMART/1.png)
 
 **Item_Weight用平均数代替空缺；Outlet_Size用众数(Medium)替换**
 ```python
