--- a/PROGRAM/BIGMART/代码解析.md
+++ b/PROGRAM/BIGMART/代码解析.md
@@ -39,12 +39,16 @@ train['Outlet_Age']=2020-train['Outlet_Establishment_Year']
 **查看有哪些数据缺失，发现Item_Weight有1463行缺少数据，Outlet_Size有2410行数据缺少**
 ![image](https://github.com/suvieu/MACHINE-LEARNING/blob/master/PROGRAM/BIGMART/1.png)
 
+<br>
+
 **Item_Weight用平均数代替空缺；Outlet_Size用众数(Medium)替换**
 ```python
 print(train.isnull().sum())
 train['Outlet_Size']=train['Outlet_Size'].fillna(train['Outlet_Size'].mode()[0])
 train['Item_Weight']=train['Item_Weight'].fillna(train['Item_Weight'].mean())
 ```
+<br>
+
 **查看Item_Visibility，筛选异常值，大于Q3 1.5倍IQR或小于Q1 1.5倍IQR的值为异常值，将其剔除**
 
 ```python
@@ -54,6 +58,7 @@ IQR=Q3-Q1
 filt_train=train.query('(@Q1-1.5*@IQR)<=Item_Visibility<=(@Q3+1.5*@IQR)')
 train=filt_train
 ```
+<br>
 
 **用cut方法将Item_Visibility分成三类，‘Low Viz','Viz','High Viz**
 **空缺值全部替换成Low Viz**
@@ -63,6 +68,8 @@ train['Item_Visibility_bins']=pd.cut(train['Item_Visibility'],(0.000,0.065,0.13,
 print(train['Item_Visibility_bins'].value_counts())
 train['Item_Visibility_bins']=train['Item_Visibility_bins'].replace(np.nan,'Low Viz',regex=True)
 ```
+<br>
+
 **查看Item_Fat_Content，发现虽然只有Low Fat和Regular两种分类，但有多种不同的表现方式，用replace将其统一起来**
 
 ```python
@@ -70,11 +77,11 @@ train['Item_Fat_Content']=train['Item_Fat_Content'].replace(['LF','low fat'],'Lo
 train['Item_Fat_Content']=train['Item_Fat_Content'].replace('reg','Regular')
 ```
 
-** Item_Fat_Content/Item_Visibility_bins/Outlet_Size/Outlet_Location_Type/Outlet_Type 这几列是文本型数据，需要转换成数值型数据。**
+**Item_Fat_Content/Item_Visibility_bins/Outlet_Size/Outlet_Location_Type/Outlet_Type 这几列是文本型数据，需要转换成数值型数据。**
 **因为Item_Fat_Content/Item_Visibility_bins/Outlet_Size/Outlet_Location_Type 这四列下的数据是定序的，即各元素之间有比较大小的，
 比如lwo fat 比Regular要低；Tier1比tier3要低**
 **所以用labelcoder转换成数值1，2，3来显示他们各自之间的比较关系即可 **
-**而Outlet_Type下的数据之间是没有大小关系的，用get dummy方法转化成 0和1的数值。
+**而Outlet_Type下的数据之间是没有大小关系的，用get dummy方法转化成 0和1的数值。**
 
 ```python
 train['Item_Fat_Content']=le.fit_transform(train['Item_Fat_Content'])
@@ -84,6 +91,7 @@ train['Outlet_Location_Type']=le.fit_transform(train['Outlet_Location_Type'])
 dummy=pd.get_dummies(train['Outlet_Type'])
 train=pd.concat([train,dummy],axis=1)
 ```
+<br>
 
 **至此数据基本清洗完毕，下面进行机器学习，对test里的数据进行预测,test文件里的数据也需要清洗，方法同上，这里不在赘述。**
 **首先将dataframe分成feature和target**
