--- a/PROGRAM/BIGMART/代码解析.md
+++ b/PROGRAM/BIGMART/代码解析.md
@@ -76,11 +76,12 @@ train['Item_Visibility_bins']=train['Item_Visibility_bins'].replace(np.nan,'Low 
 train['Item_Fat_Content']=train['Item_Fat_Content'].replace(['LF','low fat'],'Low Fat')
 train['Item_Fat_Content']=train['Item_Fat_Content'].replace('reg','Regular')
 ```
+<br>
 
 **Item_Fat_Content/Item_Visibility_bins/Outlet_Size/Outlet_Location_Type/Outlet_Type 这几列是文本型数据，需要转换成数值型数据。**
 **因为Item_Fat_Content/Item_Visibility_bins/Outlet_Size/Outlet_Location_Type 这四列下的数据是定序的，即各元素之间有比较大小的，
-比如lwo fat 比Regular要低；Tier1比tier3要低**
-**所以用labelcoder转换成数值1，2，3来显示他们各自之间的比较关系即可 **
+比如lwo fat 比Regular要低；Tier1比Tier3要低**
+**所以用labelcoder转换成数值1，2，3来显示他们各自之间的比较关系即可**
 **而Outlet_Type下的数据之间是没有大小关系的，用get dummy方法转化成 0和1的数值。**
 
 ```python
@@ -108,9 +109,11 @@ Lin.fit(x_train,y_train)
 prediction=Lin.predict(x_test)
 print(sqrt(mean_squared_error(y_test,prediction)))
 ```
+<br>
 **得到的RMSE值为1118**
 
 **最后用test CSV文件中的数据进行预测**
+
 ```python
 prediction2=Lin.predict(X_test)
 print(prediction2)
