--- a/PROGRAM/BIGMART/代码解析.md
+++ b/PROGRAM/BIGMART/代码解析.md
@@ -41,7 +41,7 @@ train['Outlet_Age']=2020-train['Outlet_Establishment_Year']
 
 <br>
 
-**Item_Weight用平均数代替空缺；Outlet_Size用众数(Medium)替换**
+**Item_Weight用平均数代替空缺；Outlet_Size用众数(Mode)替换**
 ```python
 print(train.isnull().sum())
 train['Outlet_Size']=train['Outlet_Size'].fillna(train['Outlet_Size'].mode()[0])
