--- a/PROGRAM/BIGMART/代码解析.md
+++ b/PROGRAM/BIGMART/代码解析.md
@@ -80,8 +80,9 @@ train['Item_Fat_Content']=train['Item_Fat_Content'].replace('reg','Regular')
 
 **Item_Fat_Content/Item_Visibility_bins/Outlet_Size/Outlet_Location_Type/Outlet_Type 这几列是文本型数据，需要转换成数值型数据。**
 **因为Item_Fat_Content/Item_Visibility_bins/Outlet_Size/Outlet_Location_Type 这四列下的数据是定序的，即各元素之间有比较大小的，
-比如lwo fat 比Regular要低；Tier1比Tier3要低**
+比如Low fat 比Regular要低；Tier1比Tier3要低**
 **所以用labelcoder转换成数值1，2，3来显示他们各自之间的比较关系即可**
+
 **而Outlet_Type下的数据之间是没有大小关系的，用get dummy方法转化成 0和1的数值。**
 
 ```python
@@ -95,11 +96,13 @@ train=pd.concat([train,dummy],axis=1)
 <br>
 
 **至此数据基本清洗完毕，下面进行机器学习，对test里的数据进行预测,test文件里的数据也需要清洗，方法同上，这里不在赘述。**
+<br>
 **首先将dataframe分成feature和target**
 ```python
 x=train.drop('Item_Outlet_Sales',axis=1)
 y=train['Item_Outlet_Sales']
-
+```
+<br>
 **将train里的数据分为训练集和测试集**
 **用训练集训练，再用测试集测试预测的值是否准确**
 ```python
@@ -112,13 +115,14 @@ print(sqrt(mean_squared_error(y_test,prediction)))
 <br>
 **得到的RMSE值为1118**
 
+
 **最后用test CSV文件中的数据进行预测**
 
 ```python
 prediction2=Lin.predict(X_test)
 print(prediction2)
 ```
-
+[(查看完整代码)](https://github.com/suvieu/MACHINE-LEARNING/blob/master/PROGRAM/BIGMART/bigmart.py)
 
 
 
